src/objects/Alliance_BD_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please make sure the account you are adding this BD Opportunity to has the &quot;BD Account&quot; field checked and try again.</errorMessage>
            <filterItems>
                <field>Account.BD_Account__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Business_Development_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Alliance_BD_Opportunity_Status__c</fullName>
        <label>Alliance/BD Opportunity Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alliance_BD_Partner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alliance/BD Partner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alliance_BD_Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BD_Opportunity_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BD Opportunity Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner Manager</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>User must have Channel in their Role.</errorMessage>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>Channel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Alliance_BD_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identify</fullName>
                </value>
                <value>
                    <fullName>NDA Executed</fullName>
                </value>
                <value>
                    <fullName>Exploratory Call</fullName>
                </value>
                <value>
                    <fullName>Engineering/PM Sync</fullName>
                </value>
                <value>
                    <fullName>Marketing Sync</fullName>
                </value>
                <value>
                    <fullName>Sales Sync</fullName>
                </value>
                <value>
                    <fullName>Press Release/Agreement</fullName>
                </value>
                <value>
                    <fullName>No Interest</fullName>
                </value>
                <value>
                    <fullName>Approaching Customers/Resellers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_Workflow_Rules__c</fullName>
        <label>Trigger Workflow Rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMT_Engineering_Champion__c</fullName>
        <label>VMT Engineering Champion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Endre Sara</fullName>
                </value>
                <value>
                    <fullName>Eric Wright</fullName>
                </value>
                <value>
                    <fullName>Oved Lourie</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Alliance/BD Opportunity</label>
    <nameField>
        <label>Alliance/BD Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alliance/BD Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>